# twg-bomberman

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  TODO  bootstrap  configure.ac  twg-bomberman-0.1.ebuild
autopackage/: default.apspec.in
build-aux/: autodev.am  autoget.am  autoinnosetup.am  move-if-change  warning.m4
build-aux/autodev/: codeblocks.cbp.in  codeblocks.unit.in  devcpp.dev.in  devcpp.unit.in  vs.sln.in
doc/: Doxyfile.in  Makefile.am
lib/tinyxml/: xmltest.cpp
po/: ChangeLog  Makevars  POTFILES.in  fr.gmo  fr.po  twg-bomberman.pot
src/: Makefile.am  bomberman.mk  doc.hh  main.cc  version.cc.in
src/core/: Makefile.am  application.cc  application.hh  configmanager.cc  configmanager.hh  doc.hh  inputmanager.cc  inputmanager.hh
src/data/: config.xml
src/data/map/: map.dtd  sample1.xml  sample2.xml
src/game/: Makefile.am  backgroundlayer.cc  backgroundlayer.hh  battleoptionsscene.cc  battleoptionsscene.hh  battlescene.cc  battlescene.hh  block.cc  block.hh  bomb.cc  bomb.hh  bombpowerup.cc  bombpowerup.hh  classicbomb.cc  classicbomb.hh  devilpowerup.cc  devilpowerup.hh  doc.hh  downlayer.cc  downlayer.hh  endofbattlescene.cc  endofbattlescene.hh  firepowerup.cc  firepowerup.hh  followbomb.cc  followbomb.hh  fwd.hh  gameelement.cc  gameelement.hh  humanplayer.cc  humanplayer.hh  iaplayer.cc  iaplayer.hh  introscene.cc  introscene.hh  layer.cc  layer.hh  map.cc  map.hh  menuscene.cc  (+21 more)
src/game/ia/: behavior.cc  behavior.hh  randombehavior.cc  randombehavior.hh
src/graphic/: Makefile.am  fwd.hh  graphicmanager.cc  graphicmanager.hh  imageelement.cc  imageelement.hh  textelement.cc  textelement.hh  visualelement.cc  visualelement.hh
src/graphic/gui/: choiceelement.cc  choiceelement.hh  guielement.cc  guielement.hh
src/sound/: Makefile.am  doc.hh  sound.cc  sound.hh  soundmanager.cc  soundmanager.hh
src/utils/: Makefile.am  binreloc.h  debug.cc  debug.hh  doc.hh  gettext.hh  pathmanager.cc  pathmanager.hh  portable.hh  resourcemanager.cc  resourcemanager.hh  smartpointer.cc  smartpointer.hh  smartpointer.hxx  timemanager.cc  timemanager.hh
tests/: Makefile.am
tests/utils/: Makefile.am  smartpointer1.cc
tools/: GenerateSkeleton.sh  gdb.sh  get-translatable-files.sh  valgrind.sh
